--- a/Clinic Website/Views/Appointment/Create.cshtml
+++ b/Clinic Website/Views/Appointment/Create.cshtml
@@ -62,6 +62,13 @@
             background: white;
         }
 
+        .alert-info {
+            position: relative;
+            top: 10px;
+            right: -10px;
+            max-width: 500px;
+        }
+
         
     </style>
 </head>
@@ -152,8 +159,15 @@
             Health Every Moment
 
         </h2>
+       
+        <div class="container" style="max-height:1000px;">
 
-        <div class="container" style="max-height:900px;">
+            @if (ViewBag.Result != null)
+                {
+                    <div class="alert alert-info">
+                     <h3>@ViewBag.Result</h3>
+                     </div>
+                 }
             <div class="booking p-4 border-1 shadow rounded">
                 @using (Html.BeginForm())
                 {
@@ -262,7 +276,7 @@
                                 <td><i class="fa fa-phone fa-lg"></i></td>
                                 <td><span>Telephone: </span> @Html.DisplayFor(modelItem => Model.MobileNumber)</td>
                             </tr>
-                          
+
                             <tr>
                                 <td>  <i class="fa fa-info-circle"></i></td>
                                 <td><span> Info: </span> @Html.DisplayFor(modelItem => Model.ClinicDescription)</td>
